# tessellator

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build-and-release.yml
src/app/: launcher.cpp  vtkIO.cpp
src/core/: Collapser.cpp  Collapser.h  Slicer.cpp  Slicer.h  Staircaser.cpp  Staircaser.h
src/meshers/: CMakeLists.txt  StaircaseMesher.cpp  StaircaseMesher.h  StructuredMesher.cpp  StructuredMesher.h
src/types/: Options.h  Progress.h
src/utils/: MeshTools.cpp  MeshTools.h  RedundancyCleaner.cpp  RedundancyCleaner.h
test/: CMakeLists.txt
test/app/: launcherTest.cpp  vtkIOTest.cpp
test/core/: CollapserTest.cpp  SlicerTest.cpp  SnapperTest.cpp  StaircaserTest.cpp
test/meshers/: ConformalMesherTest.cpp  StaircaseMesherTest.cpp
test/utils/: MeshToolsTest.cpp  RedundancyCleanerTest.cpp
testData/: elementTypes.vtu
testData/cases/longPolyline/: longPolyline.tessellator.json  longPolyline.vtu
